@@ -10,6 +10,10 @@ What's New in Python 3.6.1 release candidate 1
 Core and Builtins
 -----------------
 
+- Issue #28147: Fix a memory leak in split-table dictionaries: setattr()
+  must not convert combined table into split table. Patch written by INADA
+  Naoki.
+
 - Issue #28739: f-string expressions no longer accepted as docstrings and
   by ast.literal_eval() even if they do not include expressions.
 
